[workspace]
members = [".", "client"]

[package]
name = "volv"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/volv-prototype"
homepage = "https://github.com/SOF3/volv-prototype"
readme = "README.md"
description = "volv game prototype experiment"

[dependencies]
derive-new = "0.5.8"
derive_more = "0.99.2"
getset = "0.0.9"
nalgebra = {version = "0.19.0", features = ["serde-serialize"]}
serde = {version = "1.0.104", features = ["derive"]}

[profile.release]
opt-level = 3 # change to "s" or "z" when we need to
panic = "abort"
lto = true
