[package]
name = "volv-client"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/volv-prototype"
homepage = "https://github.com/SOF3/volv-prototype"
readme = "README.md"
description = "volv game prototype experiment: wasm client crate"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.46"
volv = {path = "../"}
wasm-bindgen = "0.2.58"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.35"
features = [
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"Window",
]
